# Fly-platformX

./: CMakeLists.txt  KERNELS_AND_COMPONENTS.md  PROCESS_FLOW.md  PROJECT_OVERVIEW.md  README.md  SECURITY_DESIGN.md
config/: cloud_service.json
include/core/balancer/: EnergyController.hpp  LoadBalancer.hpp  TaskOrchestrator.hpp  TaskTypes.hpp
include/core/cache/: CacheConfig.hpp
include/core/cache/base/: AdaptiveCache.hpp  BaseCache.hpp
include/core/cache/dynamic/: DynamicCache.hpp  PlatformOptimizer.hpp
include/core/cache/experimental/: PreloadManager.hpp
include/core/cache/manager/: CacheManager.hpp  CacheSync.hpp
include/core/cache/metrics/: CacheConfig.hpp  CacheMetrics.hpp
include/core/drivers/: ARMDriver.hpp
include/core/kernel/advanced/: ArchitecturalKernel.hpp  ComputationalKernel.hpp  CryptoMicroKernel.hpp  OrchestrationKernel.hpp  SmartKernel.hpp
include/core/kernel/base/: CoreKernel.hpp  EnergyController.hpp  LoadBalancer.hpp  MicroKernel.hpp  ParentKernel.hpp  TunnelManager.hpp
include/core/recovery/: RecoveryManager.hpp
include/core/security/: CryptoKernel.hpp  SecurityManager.hpp
include/core/thread/: ThreadPool.hpp
scripts/: start_service.sh
src/: main.cpp
src/core/balancer/: EnergyController.cpp  LoadBalancer.cpp  TaskOrchestrator.cpp
src/core/cache/: CacheMetrics.cpp
src/core/cache/base/: AdaptiveCache.cpp
src/core/cache/dynamic/: DynamicCache.cpp  PlatformOptimizer.cpp
src/core/cache/experimental/: PreloadManager.cpp
src/core/cache/manager/: CacheManager.cpp  CacheSync.cpp
src/core/cache/metrics/: CacheMetrics.cpp
src/core/drivers/: ARMDriver.cpp
src/core/kernel/: LoadBalancer.cpp
src/core/kernel/advanced/: ArchitecturalKernel.cpp  ComputationalKernel.cpp  CryptoMicroKernel.cpp  OrchestrationKernel.cpp  SmartKernel.cpp
src/core/kernel/base/: CoreKernel.cpp  EnergyController.cpp  LoadBalancer.cpp  MicroKernel.cpp  ParentKernel.cpp  TunnelManager.cpp
src/core/recovery/: RecoveryManager.cpp
src/core/security/: CryptoKernel.cpp  SecurityManager.cpp
src/core/thread/: ThreadPool.cpp
tests/core/balancer/: LoadBalancerSmokeTest.cpp
tests/core/cache/: DynamicCacheSmokeTest.cpp
tests/core/kernel/: KernelSmokeTest.cpp
tests/core/security/: SecurityManagerSmokeTest.cpp
